--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "koa": "^0.5.0",
     "koa-static": "^1.4.3",
     "koa-views": "^1.2.0",
-    "napa": "^0.4.0"
+    "napa": "^0.4.0",
+    "lodash": "^2.4.1",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "gulp": "~3.5.2",
+    "gulp-util": "^2.2.14",
     "open": "0.0.4",
     "gulp-concat": "^2.1.7",
     "gulp-clean": "^0.2.4",
