NOW-33 Added spec test for reviews component

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,36 +1,100 @@
 {
-  "node": true,
-  "browser": true,
+  "asi" : false,
+  "bitwise" : false,
+  "boss" : true,
+  "browser" : true,
+  "camelcase" : false,
+  "couch" : false,
+  "curly" : false,
+  "debug" : true,
+  "devel" : true,
+  "dojo" : false,
+  "eqeqeq" : true,
+  "eqnull" : true,
   "esnext": true,
-  "bitwise": true,
-  "camelcase": false,
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
-  "indent": 2,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "quotmark": "single",
-  "regexp": true,
-  "undef": true,
-  "unused": false,
-  "strict": true,
-  "trailing": true,
-  "smarttabs": true,
-  "globals": {
-    "angular": false,
-    "after": false,
-    "afterEach": false,
-    "angular": false,
-    "before": false,
-    "beforeEach": false,
-    "browser": false,
-    "describe": false,
-    "expect": false,
-    "inject": false,
-    "it": false,
-    "spyOn": false,
-    "LITHIUM": false
-  }
+  "esnext" : false,
+  "evil" : true,
+  "expr" : true,
+  "forin" : true,
+  "funcscope" : false,
+  "globalstrict" : true,
+  "immed" : true,
+  "indent" : 2,
+  "iterator" : false,
+  "jquery" : true,
+  "lastsemic" : true,
+  "latedef" : true,
+  "laxbreak" : false,
+  "laxcomma" : false,
+  "loopfunc" : false,
+  "maxcomplexity" : 30,
+  "maxdepth" : 4,
+  "maxerr" : 100,
+  "maxlen" : 120,
+  "maxstatements" : 35,
+  "mootools" : false,
+  "multistr" : false,
+  "newcap" : true,
+  "noarg" : true,
+  "node" : true,
+  "noempty" : true,
+  "nomen" : false,
+  "nonew" : true,
+  "nonstandard" : false,
+  "onevar" : false,
+  "passfail" : false,
+  "plusplus" : false,
+  "predef" : [
+    "__dirname",
+    "element",
+    "browser",
+    "require",
+    "jasmine",
+    "describe",
+    "xdescribe",
+    "it",
+    "iit",
+    "inject",
+    "xit",
+    "beforeEach",
+    "afterEach",
+    "expect",
+    "input",
+    "pause",
+    "spyOn",
+    "runs",
+    "waits",
+    "waitsFor",
+    "Benchmark",
+    "Raphael",
+    "Backbone",
+    "Modernizr",
+    "Handlebars",
+    "Ext",
+    "_gaq",
+    "module",
+    "exports",
+    "define",
+    "$",
+    "jQuery",
+    "grunt",
+    "phantom",
+    "WebPage"
+  ],
+  "proto" : false,
+  "prototypejs" : false,
+  "quotmark" : "single",
+  "rhino" : false,
+  "scripturl" : false,
+  "shadow" : false,
+  "smarttabs" : false,
+  "strict" : true,
+  "sub" : false,
+  "supernew" : false,
+  "trailing" : true,
+  "undef" : true,
+  "unused" : true,
+  "validthis" : false,
+  "white" : false,
+  "wsh" : false
 }
