--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "li-rnr-app",
-  "version": "",
+  "version": "0.0.1",
   "dependencies": {
     "koa": "^0.5.0",
     "koa-static": "^1.4.3",
@@ -15,7 +15,32 @@
     "open": "0.0.4",
     "gulp-concat": "^2.1.7",
     "gulp-clean": "^0.2.4",
-    "gulp-browserify": "^0.4.6"
+    "gulp-browserify": "^0.4.6",
+    "requirejs": "^2.1.11",
+    "karma-requirejs": "^0.2.1",
+    "karma-phantomjs-launcher": "~0.1.1",
+    "karma": "~0.10.8",
+    "gulp-karma": "0.0.2",
+    "partialify": "^3.0.0",
+    "tiny-lr": "0.0.5",
+    "koa-livereload": "^0.1.1",
+    "gulp-livereload": "^1.2.0",
+    "phantomjs": "^1.9.7-1",
+    "karma-script-launcher": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.2",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "~0.2.0",
+    "karma-coffee-preprocessor": "^0.1.3",
+    "karma-threshold-reporter": ">=0.1.6",
+    "karma-coverage": "~0.1.4",
+    "karma-junit-reporter": "~0.2.1",
+    "karma-commonjs": "0.0.4",
+    "karma-spec-reporter": "~0.0.6",
+    "karma-story-reporter": "~0.2.2",
+    "karma-growl-reporter": "~0.1.1",
+    "bower": "^1.2.8",
+    "jasmine-reporters": "~0.2.1",
+    "gulp-filelog": "^0.2.0"
   },
   "engines": {
     "node": ">=0.11.10",
@@ -26,12 +51,13 @@
     "start": "node node_modules/gulp/bin/gulp app",
     "postinstall": "node node_modules/bower/bin/bower install"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lithiumtech/angular-li-community-app.git"
-  },
   "napa": {
     "angular": "angular/bower-angular",
-    "angular-route": "angular/bower-angular-route"
+    "angular-route": "angular/bower-angular-route",
+    "angular-mocks": "angular/bower-angular-mocks"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lithiumtech/li-rnr-app.git"
   }
 }
