--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "1.2.7",
     "angular-ui-bootstrap-bower": "~0.6.0",
     "angular-translate": "1.1.0",
-    "angular-translate-loader-partial": "0.1.0"
+    "angular-translate-loader-partial": "0.1.0",
+    "bootstrap-sass": "~3.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.7",
