--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "karma-growl-reporter": "~0.1.1",
     "bower": "^1.2.8",
     "jasmine-reporters": "~0.2.1",
-    "gulp-filelog": "^0.2.0"
+    "gulp-filelog": "^0.2.0",
+    "gulp-sass": "^0.7.1"
   },
   "engines": {
     "node": ">=0.11.10",
