--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   "scripts": {
     "install": "napa",
     "start": "node node_modules/gulp/bin/gulp app",
-    "postinstall": "node node_modules/bower/bin/bower install"
+    "postinstall": "node node_modules/bower/bin/bower install",
+    "test": "gulp test"
   },
   "napa": {
     "angular": "angular/bower-angular",
