--- a/package.json
+++ b/package.json
@@ -5,27 +5,26 @@
     "koa": "^0.5.0",
     "koa-static": "^1.4.3",
     "koa-views": "^1.2.0",
+    "koa-livereload": "^0.1.1",
+
+    "bower": "^1.2.8",
+    "partialify": "^3.0.0",
+    "phantomjs": "^1.9.7-1",
     "napa": "^0.4.0",
     "lodash": "^2.4.1",
-    "underscore": "^1.6.0"
-  },
-  "devDependencies": {
+    "underscore": "^1.6.0",
+
     "gulp": "~3.5.2",
     "gulp-util": "^2.2.14",
-    "open": "0.0.4",
     "gulp-concat": "^2.1.7",
     "gulp-clean": "^0.2.4",
-    "gulp-browserify": "^0.4.6",
-    "requirejs": "^2.1.11",
-    "karma-requirejs": "^0.2.1",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma": "~0.10.8",
     "gulp-karma": "0.0.2",
-    "partialify": "^3.0.0",
-    "tiny-lr": "0.0.5",
-    "koa-livereload": "^0.1.1",
+    "gulp-browserify": "^0.4.6",
     "gulp-livereload": "^1.2.0",
-    "phantomjs": "^1.9.7-1",
+    "gulp-filelog": "^0.2.0",
+
+    "karma": "~0.10.8",
+    "karma-phantomjs-launcher": "~0.1.1",
     "karma-script-launcher": "^0.1.0",
     "karma-chrome-launcher": "^0.1.2",
     "karma-firefox-launcher": "^0.1.3",
@@ -38,10 +37,13 @@
     "karma-spec-reporter": "~0.0.6",
     "karma-story-reporter": "~0.2.2",
     "karma-growl-reporter": "~0.1.1",
-    "bower": "^1.2.8",
-    "jasmine-reporters": "~0.2.1",
-    "gulp-filelog": "^0.2.0",
-    "gulp-sass": "^0.7.1"
+
+    "jasmine-reporters": "~0.2.1"
+  },
+  "devDependencies": {
+    "open": "0.0.4",
+    "gulp-sass": "^0.7.1",
+    "tiny-lr": "0.0.5"
   },
   "engines": {
     "node": ">=0.11.11",
