--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "koa-static": "^1.4.3",
     "koa-views": "^1.2.0",
     "koa-livereload": "^0.1.1",
-
+    "underscore": "^1.6.0",
+    "lodash": "^2.4.1"
+  },
+  "devDependencies": {
     "bower": "^1.2.8",
     "partialify": "^3.0.0",
     "phantomjs": "^1.9.7-1",
-    "napa": "^0.4.0",
-    "lodash": "^2.4.1",
-    "underscore": "^1.6.0",
-
+    "open": "0.0.4",
+    "tiny-lr": "0.0.5",
     "gulp": "~3.5.2",
     "gulp-util": "^2.2.14",
     "gulp-concat": "^2.1.7",
@@ -22,7 +23,6 @@
     "gulp-browserify": "^0.4.6",
     "gulp-livereload": "^1.2.0",
     "gulp-filelog": "^0.2.0",
-
     "karma": "~0.10.8",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma-script-launcher": "^0.1.0",
@@ -37,28 +37,16 @@
     "karma-spec-reporter": "~0.0.6",
     "karma-story-reporter": "~0.2.2",
     "karma-growl-reporter": "~0.1.1",
-
     "jasmine-reporters": "~0.2.1"
-  },
-  "devDependencies": {
-    "open": "0.0.4",
-    "gulp-sass": "^0.7.1",
-    "tiny-lr": "0.0.5"
   },
   "engines": {
     "node": ">=0.11.11",
     "npm": ">=1.4.4"
   },
   "scripts": {
-    "install": "napa",
     "start": "node node_modules/gulp/bin/gulp app",
     "postinstall": "node node_modules/bower/bin/bower install",
     "test": "node --harmony `which gulp` test"
-  },
-  "napa": {
-    "angular": "angular/bower-angular",
-    "angular-route": "angular/bower-angular-route",
-    "angular-mocks": "angular/bower-angular-mocks"
   },
   "repository": {
     "type": "git",
