--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "karma-spec-reporter": "~0.0.6",
     "karma-story-reporter": "~0.2.2",
     "karma-growl-reporter": "~0.1.1",
-    "jasmine-reporters": "~0.2.1"
+    "jasmine-reporters": "~0.2.1",
+    "pretty-hrtime": "^0.2.0"
   },
   "engines": {
     "node": ">=0.11.11",
