--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "karma-story-reporter": "~0.2.2",
     "karma-growl-reporter": "~0.1.1",
     "jasmine-reporters": "~0.2.1",
-    "pretty-hrtime": "^0.2.0"
+    "pretty-hrtime": "^0.2.0",
+    "gulp-sass": "^0.7.1"
   },
   "engines": {
     "node": ">=0.11.11",
