--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "karma-growl-reporter": "~0.1.1",
     "jasmine-reporters": "~0.2.1",
     "pretty-hrtime": "^0.2.0",
-    "gulp-sass": "^0.7.1"
+    "gulp-sass": "^0.7.1",
+    "node-touch": "0.0.3",
+    "q": "^1.0.0",
+    "touch": "0.0.3"
   },
   "engines": {
     "node": ">=0.11.11",
