--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "li-rnr-app",
   "version": "0.0.1",
   "dependencies": {
-    "koa": "^0.5.0",
-    "koa-static": "^1.4.3",
-    "koa-views": "^1.2.0",
-    "koa-livereload": "^0.1.1",
-    "underscore": "^1.6.0",
-    "lodash": "^2.4.1"
+    "express": "^3.4.8",
+    "lodash": "^2.4.1",
+    "consolidate": "^0.10.0",
+    "connect-livereload": "^0.3.2"
   },
   "devDependencies": {
     "bower": "^1.2.8",
