--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "express": "^3.4.8",
     "lodash": "^2.4.1",
     "consolidate": "^0.10.0",
-    "connect-livereload": "^0.3.2"
+    "connect-livereload": "^0.3.2",
+    "nconf": "^0.6.9",
+    "winston": "^0.7.2",
+    "merge": "^1.1.2"
   },
   "devDependencies": {
     "bower": "^1.2.8",
