--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "connect-livereload": "^0.3.2",
     "nconf": "^0.6.9",
     "winston": "^0.7.2",
-    "merge": "^1.1.2"
+    "merge": "^1.1.2",
+    "passport": "^0.2.0"
   },
   "devDependencies": {
     "bower": "^1.2.8",
