ACT-360 - forcing bower install to be silent to fix automation

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "start": "node node_modules/gulp/bin/gulp app",
-    "postinstall": "node node_modules/bower/bin/bower install",
+    "postinstall": "node node_modules/bower/bin/bower install --config.interactive=false",
     "test": "node --harmony `which gulp` test"
   },
   "repository": {
