--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "karma-script-launcher": "^0.1.0",
     "karma-chrome-launcher": "^0.1.2",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": ">=0.1.0",
+    "karma-jasmine": "~0.1.0",
     "karma-coffee-preprocessor": "^0.1.3",
     "karma-threshold-reporter": ">=0.1.6",
     "karma-coverage": "~0.1.4",
